<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/bct2"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="100dp"
            android:layout_height="100dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="138dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="146dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="LOGO"
            android:src="@drawable/dead" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"

            android:layout_marginStart="0dp"
            android:layout_marginTop="136dp"
            android:text="LOGIN "
            android:textAlignment="center"
            android:textColor="#dadedd"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="354dp"
            android:layout_height="220dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="390dp"
            android:layout_marginEnd="60dp"
            android:orientation="vertical"
            android:padding="18dp">

            <EditText
                android:id="@+id/etUsernameLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#cac8c8" />

            <EditText
                android:id="@+id/etPasswdLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="@string/password"
                android:imeActionId="6"
                android:imeActionLabel="Sign In"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#cac8c8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnSignUpLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#42323639"
                    android:text="@string/register"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="2dp"
                    android:layout_height="2dp"
                    android:layout_weight="0"
                    android:orientation="vertical"></LinearLayout>

                <Button
                    android:id="@+id/btnSignInLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#42323639"
                    android:text="@string/login"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
