<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bct"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="230dp"
            android:text="@string/regtittle"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/llLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="530dp"
            android:layout_marginEnd="70dp"
            android:orientation="vertical"
            android:padding="18dp">

            <EditText
                android:id="@+id/etUsernameRegister"
                android:layout_width="267dp"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/etPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:hint="@string/password"
                android:imeActionId="6"
                android:imeActionLabel="Sign In"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btRegister"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/roundedbutton"
                    android:text="@string/register"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignBottom="@+id/llLogin"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="117dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="127dp"
            android:layout_marginBottom="450dp"
            app:srcCompat="@drawable/dead" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="283dp"
            android:layout_marginEnd="343dp"
            app:srcCompat="@drawable/lak" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="334dp"
            android:layout_marginEnd="336dp"
            app:srcCompat="@drawable/gem" />

    </RelativeLayout>
</ScrollView>
